<resources>
    <string name="app_name">MPC</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mor_amount">Mortgage Amount</string>
    <string name="button_send">Calculate</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="auth_period">Authorization Period</string>
    <string name="pay_freq">Payment Frequency</string>
    <string name="show_calc"> </string>
    <string name="outp"> %s </string>

</resources>